Fixed background colour being weird on small screens

--- a/sort-viz/src/index.css
+++ b/sort-viz/src/index.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* Just to set the entire background colour */
+body {
+    background-color: #E2E8F0;
+}    
